--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('https://www.clalit.co.il/he/new_article_images/your_health/safety/coronavirus/wide.jpg');
 }
 
 code {
