--- a/src/components/TimeLine/TimeLine.css
+++ b/src/components/TimeLine/TimeLine.css
@@ -14,7 +14,10 @@
     font-size: larger;
     width: 40%;
     text-align: center;
+    border: 3px solid brown;
 }
 h1{
+    margin-top: 0;
     font-size: 60px;
+    color: white;
 }
