--- a/src/pages/Country/Country.css
+++ b/src/pages/Country/Country.css
@@ -1,17 +1,22 @@
 .covid {
-    display: flex;
     padding: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     justify-content: space-between;
     height: 500px;
 }
-.covid div{
-    margin: 15px;
+.covid div  {
+    display: flex;
+    flex-wrap:wrap;
+    flex-direction: row;
+    margin:30px;
     padding: 30px;
     background-color: hsla(0, 0%, 100%, 0.473);
-    font-size: larger;
-    height: 30px;
+    font-size: 50px;
+    height: 150px;
 }
 h1{
     text-align: center;
+}
+b{
+    padding: 0px 10px 0 10px;
 }
